FIX: memperbaiki text-align pada h3

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ main {
     text-align: center;
     font-size: 24px;
     color: green;
-    display: inline-block;
+    display: block;
     margin-bottom: auto;
 }
 
